test/testcases/malgo/error/ErrorKind2.mlg
data A = A
def f : A a -> A a
def f = { x -> x }
